<resources>
    <string name="app_name">UniLocal</string>
    <string name="txt_correo">Correo</string>
    <string name="txt_iniciar_sesion">Iniciar Sesión</string>
    <string name="txt_contrasena">Contraseña</string>
    <string name="txt_registrarse">Registrarse</string>
    <string name="txt_nombre">Nombre</string>
    <string name="txt_nickname">Nickname</string>
    <string name="txt_busqueda">Buscar lugar</string>
    <string name="info_lugar">Informacion del lugar</string>
    <string name="comentarios">Comentarios</string>
    <string name="horarios_del_lugar">Horarios del lugar</string>
    <string name="txt_restaurantes">restaurantes</string>
    <string name="txt_hoteles">hoteles</string>
    <string name="txt_almacen">almacen</string>
    <string name="txt_cafes">cafes</string>
    <string name="txt_bares">bares</string>
    <string name="es_obligatorio">Este campo es obligatorio</string>
    <string name="maximo_caracteres">Máximo 10 caracteres</string>
    <string name="lugar_creado">Lugar creado con exito</string>
    <string name="datos_correctos">Los datos son correctos</string>
    <string name="datos_incorrectos">Los datos son incorrectos</string>
    <string name="logout">cerrar sesion</string>
    <string name="txt_nombre_lugar">Nombre del negocio</string>
    <string name="txt_descripcion_lugar">Descripción del negocio</string>
    <string name="txt_telefono_lugar">Teléfono del negocio</string>
    <string name="btn_crear_lugar">Crear nuevo Lugar</string>
    <string name="btn_nuevo_lugar">Nuevo negocio</string>
    <string name="btn_direccion_lugar">Dirección del negocio</string>
    <string name="txt_home">Inicio</string>
    <string name="txt_mis_lugares">Mis Lugares</string>
    <string name="txt_favoritos">Favoritos</string>
    <string name="nombre_usuario_header">Nombre Usuario</string>
    <string name="correo_usuario_header">Correo Usuario</string>
    <string name="menu_user">Menú</string>
    <string name="mis_lugares_user">Mis Lugares</string>
    <string name="crear_lugar_user">Crear Lugar</string>

</resources>