<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/secundario"
    tools:context=".activities.RegistroActivity">



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_registrarse"
        android:textColor="@color/black"
        android:textSize="50dp"
        android:layout_marginBottom="50dp"/>



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nombre_layout"
        style="@style/til_form">

        <EditText
            android:id="@+id/nombre_usuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/fondo_forms"
            android:hint="@string/txt_nombre"
            android:textColorHint="@color/secundario"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nickname_layout"
        style="@style/til_form">


        <EditText
            android:id="@+id/nickname_usuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/fondo_forms"
            android:hint="@string/txt_nickname"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_layout"
        style="@style/til_form">


    <EditText
            android:id="@+id/email_usuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/fondo_forms"
            android:hint="@string/txt_correo"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_layout"
        style="@style/til_form">


    <EditText
            android:id="@+id/password_usuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/fondo_forms"
            android:hint="@string/txt_contrasena"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/btn_registro"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:text="@string/txt_registrarse"
        />
</LinearLayout>