<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/secundario"
    tools:context="fragmentos.LoginFragment">

    <ImageView
        android:id="@+id/imagen_logo"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:layout_marginBottom="40dp"
        android:layout_gravity="center"
        android:src="@drawable/ic_baseline_my_location_24" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_layout"
        style="@style/til_form">

        <EditText
            android:id="@+id/email_usuario"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@drawable/fondo_forms"
            android:hint="@string/txt_correo"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_layout"
        style="@style/til_form">

        <EditText
            android:id="@+id/password_usuario"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_height="match_parent"
            android:background="@drawable/fondo_forms"
            android:hint="@string/txt_contrasena"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/btn_login"
        android:layout_width="327dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/fondo_forms"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="50dp"
        android:text="@string/txt_iniciar_sesion"/>


</LinearLayout>