<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secundario">




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        tools:context=".actividades.CrearLugarActivity">




        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nombre_layout"
            style="@style/til_form"
            android:background="@color/white"
            android:layout_marginTop="50dp">
        >

            <EditText
                android:id="@+id/nombre_lugar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/fondo_forms"
                android:drawableEnd="@drawable/ic_baseline_add_a_photo_24"

                android:hint="@string/txt_nombre_lugar"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/descripcion_layout"
            style="@style/til_form"
            android:background="@color/white">


            <EditText
                android:id="@+id/descripcion_lugar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/fondo_forms"
                android:gravity="left"
                android:hint="@string/txt_descripcion_lugar"
                android:lines="8"
                tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/direccion_layout"
            style="@style/til_form"
            android:background="@color/white">


        <EditText
                android:id="@+id/direccion_lugar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/fondo_forms"
                android:hint="@string/btn_direccion_lugar"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Spinner
            android:id="@+id/ciudad_lugar"
            android:layout_width="350dp"
            android:layout_height="55dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:background="@drawable/fondo_forms"
            android:layout_marginBottom="10dp" />

        <Spinner
            android:id="@+id/categoria_lugar"
            android:layout_width="350dp"
            android:layout_height="55dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:background="@drawable/fondo_forms"
            android:layout_marginBottom="10dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/telefono_layout"
            style="@style/til_form"
            android:background="@color/white">


            <EditText
                android:id="@+id/telefono_lugar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:background="@drawable/fondo_forms"
                android:hint="@string/txt_telefono_lugar"/>

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/lista_horarios"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="vertical"
            android:background="@color/white">


        </LinearLayout>

        <Button
            android:id="@+id/btn_crear_lugar"
            android:layout_width="210dp"
            android:layout_height="60dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="50dp"
            android:text="@string/btn_crear_lugar" />

    </LinearLayout>
</ScrollView>