<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.UserActivity">



    <FrameLayout
        android:id="@+id/contenido_principal"
        android:layout_width="match_parent"
        android:layout_height="400dp" />


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >

        <LinearLayout
            android:id="@+id/caja_buttom"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_alignParentBottom="true"
            android:background="@drawable/fondo_barra_abajo"
            android:gravity="center"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <Button
                android:id="@+id/btn_menu"
                android:layout_width="130dp"
                android:layout_height="80dp"
                android:layout_marginBottom="1dp"
                android:drawableTop="@drawable/ic_baseline_menu_24"
                android:background="@color/white"
                android:text="@string/menu_user"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:textSize="15sp" />

            <Button
                android:id="@+id/btn_mis_lugares"
                android:layout_width="130dp"
                android:layout_height="80dp"
                android:layout_marginBottom="1dp"
                android:drawableTop="@drawable/ic_baseline_list_alt_24"
                android:background="@color/white"
                android:textAllCaps="false"
                android:text="@string/mis_lugares_user"
                android:textColor="@color/secundario"
                android:textSize="15sp" />

            <Button
                android:id="@+id/btn_crear_lugar_usuario"
                android:layout_width="140dp"
                android:layout_height="80dp"
                android:layout_marginBottom="1dp"
                android:drawableTop="@drawable/ic_baseline_add_location_24"
                android:background="@color/white"
                android:text="@string/crear_lugar_user"
                android:textAllCaps="false"
                android:textColor="@color/secundario"
                android:textSize="15sp" />
        </LinearLayout>

    </RelativeLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/activity_nav_header"
        app:menu="@menu/menu" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="vertical"
            android:padding="16dp">

            <Button
                android:id="@+id/btn_logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/logout"
                />
        </LinearLayout>
    </com.google.android.material.navigation.NavigationView>


</androidx.drawerlayout.widget.DrawerLayout>